# cloud-diagram-mcp

./: .gitignore  CHANGELOG.md  CI_CD.md  CONTRIBUTING.md  INSTALL.md  INTERACTIVE_DEMO.md  MANIFEST.in  README.md  TESTING.md  generate_documentation_diagrams.py  generate_examples.py  generate_interactive.py  output.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test-mcp.js  test.js  test_mcp.py  test_mcp_server.py  test_visualization.py
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge.yml  codeql.yml  labeler.yml  lint.yml  release.yml  test.yml
cloud_diagram_mcp/: __init__.py  interactive_html.py  server.py  svg_embedder.py  visualizer_hierarchical.py
cloud_diff_mcp/: __init__.py  interactive_html.py  server.py  svg_embedder.py  visualizer.py  visualizer_hierarchical.py
docs/: diagram-example.md  integration-guide.md
examples/: architecture-azure.json  azure-plan.json  complex-aws-plan.json  sample-plan.json
screenshots/: OUTPUT_EXAMPLES.md  PR_SCREENSHOTS.md  README_PREVIEW.md  readme-screenshot.txt
src/: index.ts
src/utils/: mermaid-generator.ts  risk-summary.ts  types.ts
ui/: .gitignore  architecture.spec.ts  create-test-harness-architecture.py  create-test-harness.py  mcp-app.html  mcp-apps.spec.ts  package-lock.json  package.json  test-harness.html  ui.spec.ts  vite.config.ts
ui/mcp-apps-testing/: README.md
ui/src/: main.tsx  types.ts
ui/src/components/: App.tsx  DetailPanel.tsx  DiagramView.tsx  Header.tsx  Legend.tsx  ResourceNode.tsx  SvgViewer.tsx
ui/src/icons/: aws.tsx  azure.tsx  gcp.tsx  index.tsx
ui/src/styles/: global.css
